<resources>
    <string name="app_name">Aegis AndroidBle</string>
    <string name="text_static_is_advertising">Advertising.......</string>
    <string name="text_connected">Central connected</string>
    <string name="text_disconnected">Central not connected</string>
    <string name="text_static_char_for_read">Readable characteristic:</string>
    <string name="text_static_char_for_write">Writeable characteristics: </string>
    <string name="text_static_char_for_indicate">Indicate (notify) characteristic:</string>
    <string name="button_send">Send</string>
    <string name="button_clear_log">Clear</string>
    <string name="bt_null">no bluetooth found</string>
    <string name="logs">Logs:</string>


    <string name="no_device_found">No Device Found</string>
    <string name="char_uuid_missed_connection">Your Missed Connection UUID</string>
    <string name="char_uuid_emergency">Your Emergency Service UUID</string>
    <string name="char_uuid_emergency_call">Your Emergency Call UUID</string>
    <string name="char_uuid_catch">Your Catch UUID</string>
    <string name="char_uuid_catch_all">Your Catch All UUID</string>
    <string name="char_uuid_missed_calls">Your Missed call UUID</string>
    <string name="_0_subscribers">0 subscribers</string>
    <string name="android_indication">Android indication</string>
    <string name="android_for_read">Android for read</string>
    <string name="height">Height</string>
    <string name="distance">Distance</string>
    <string name="scale">Scale</string>
    <string name="hud_pitch">Hud Pitch</string>
    <string name="eye_pitch">Eye Pitch</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="subscribers">0 subscribers</string>
</resources>