<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewConnectionState"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIsAdvertising"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_static_is_advertising"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchAdvertising"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:checked="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewIsAdvertising"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/scrollViewLog"
        android:layout_width="380dp"
        android:layout_height="369dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/img_gray_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSend"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/logs" />

    </ScrollView>


    <LinearLayout
        android:id="@+id/textViewCharForWriteL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHintCharForWrite">

        <TextView
            android:id="@+id/textViewCharForWrite"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/img_gray_border"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"/>

         <TextView
            android:id="@+id/value"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/img_gray_border"
            android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewHintCharForWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_static_char_for_write"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCharForRead" />

    <TextView
        android:id="@+id/textViewHintCharForRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:labelFor="@id/editTextCharForRead"
        android:text="@string/text_static_char_for_read"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConnectionState" />

    <EditText
        android:id="@+id/editTextCharForRead"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/img_gray_border"
        android:ems="10"
        android:hint="@string/android_for_read"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHintCharForRead" />

    <TextView
        android:id="@+id/textViewHintCharForIndicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_char_for_indicate"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharForWriteL" />

    <EditText
        android:id="@+id/editTextCharForIndicate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/img_gray_border"
        android:ems="10"
        android:hint="@string/android_indication"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textViewCharForWriteL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHintCharForIndicate" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTapSend"
        android:text="@string/button_send"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/editTextCharForIndicate"
        app:layout_constraintTop_toBottomOf="@+id/editTextCharForIndicate"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textViewSubscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_0_subscribers"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHintCharForRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewIsAdvertising"
        app:layout_constraintTop_toBottomOf="@+id/textViewIsAdvertising"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/buttonClearLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:minWidth="48dip"
        android:minHeight="32dip"
        android:onClick="onTapClearLog"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/button_clear_log"
        app:layout_constraintEnd_toEndOf="@+id/scrollViewLog"
        app:layout_constraintTop_toTopOf="@+id/scrollViewLog"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>